--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 </head>
 
 <body>
-  <div class="aaa">
+  <div class="eisenhower-container">
     <img src="./eisenhower-matrix.jpg">
     <a class="more-info" href="https://goal-life.com/page/method/matrix-eisenhower">
       Want more details?
     </a>
   </div>
-  <div class="centered-main-page-element">
+  <div class="tasks-container">
     <p id="top-section-for-adding-element-to-list">
       <label for="new-task">Add Item</label>
     <div class="task-row-wrapper">
