--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
     </a>
   </div>
   <div class="tasks-container">
-    <p id="top-section-for-adding-element-to-list">
+    <p>
       <label for="new-task">Add Item</label>
-    <div class="task-row-wrapper">
-      <input id="new-task" class="task" type="text">
-      <button>Add</button>
-    </div>
+      <div class="wrapper">
+        <input id="new-task" class="task" type="text">
+        <button>Add</button>
+      </div>
     </p>
     <h3>Todo</h3>
-    <ul id="incomplete-tasks">
+    <ul id="incomplete">
       <li>
         <input type="checkbox">
         <label class="task">Pay Bills</label>
@@ -41,7 +41,7 @@
       </li>
     </ul>
     <h3>Completed</h3>
-    <ul id="completed-tasks">
+    <ul id="completed">
       <li>
         <input type="checkbox" checked>
         <label class="task">See the Doctor</label>
