--- a/index.html
+++ b/index.html
@@ -10,44 +10,50 @@
 
 <body>
   <div class="eisenhower-container">
-    <img src="./eisenhower-matrix.jpg">
+    <img id="matrix" src="./eisenhower-matrix.jpg">
     <a class="more-info" href="https://goal-life.com/page/method/matrix-eisenhower">
       Want more details?
     </a>
   </div>
   <div class="tasks-container">
     <p>
-      <label for="new-task">Add Item</label>
+      <label class="list-name" for="new-task">Add Item</label>
       <div class="wrapper">
         <input id="new-task" class="task" type="text">
-        <button>Add</button>
+        <button class="task-btn">Add</button>
       </div>
     </p>
-    <h3>Todo</h3>
+    <h3 class="list-name">Todo</h3>
     <ul id="incomplete">
-      <li>
-        <input type="checkbox">
-        <label class="task">Pay Bills</label>
-        <input type="text" class="task">
-        <button class="edit">Edit</button>
-        <button class="delete"><img src="./remove.svg"></button>
+      <li class="task-row view-mode">
+        <input class="marker" type="checkbox">
+        <label class="task fixed">Pay Bills</label>
+        <input type="text" class="task selected">
+        <button class="task-btn edit">Edit</button>
+        <button class="task-btn delete">
+          <img class="del-icon" src="./remove.svg">
+        </button>
       </li>
-      <li class="edit-mode">
-        <input type="checkbox">
-        <label class="task">Go Shopping</label>
-        <input type="text" value="Go Shopping" class="task">
-        <button class="edit">Save</button>
-        <button class="delete"><img src="./remove.svg"></button>
+      <li class="task-row edit-mode">
+        <input class="marker" type="checkbox">
+        <label class="task fixed">Go Shopping</label>
+        <input type="text" value="Go Shopping" class="task selected">
+        <button class="task-btn edit">Save</button>
+        <button class="task-btn delete">
+          <img class="del-icon" src="./remove.svg">
+        </button>
       </li>
     </ul>
-    <h3>Completed</h3>
+    <h3 class="list-name">Completed</h3>
     <ul id="completed">
-      <li>
-        <input type="checkbox" checked>
-        <label class="task">See the Doctor</label>
-        <input type="text" class="task">
-        <button class="edit">Edit</button>
-        <button class="delete"><img src="./remove.svg"></button>
+      <li class="task-row view-mode">
+        <input class="marker" type="checkbox" checked>
+        <label class="task fixed">See the Doctor</label>
+        <input type="text" class="task selected">
+        <button class="task-btn edit">Edit</button>
+        <button class="task-btn delete">
+          <img class="del-icon" src="./remove.svg">
+        </button>
       </li>
     </ul>
   </div>
