--- a/index.html
+++ b/index.html
@@ -9,20 +9,20 @@
 </head>
 
 <body>
-  <div class="eisenhower-container">
+  <header class="eisenhower-container">
     <img id="matrix" src="./eisenhower-matrix.jpg">
     <a class="more-info" href="https://goal-life.com/page/method/matrix-eisenhower">
       Want more details?
     </a>
-  </div>
-  <div class="tasks-container">
-    <p>
+  </header>
+  <main class="tasks-container">
+    <section>
       <label class="list-name" for="new-task">Add Item</label>
       <div class="wrapper">
         <input id="new-task" class="task" type="text">
         <button class="task-btn">Add</button>
       </div>
-    </p>
+    </section>
     <h3 class="list-name">Todo</h3>
     <ul id="incomplete">
       <li class="task-row view-mode">
@@ -56,7 +56,7 @@
         </button>
       </li>
     </ul>
-  </div>
+  </main>
   <script src="app.js"></script>
 </body>
 
