--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <header class="eisenhower-container">
-    <img id="matrix" src="./eisenhower-matrix.jpg">
+    <img id="matrix" src="./eisenhower-matrix.jpg" alt="eisenhower matrix">
     <a class="more-info" href="https://goal-life.com/page/method/matrix-eisenhower">
       Want more details?
     </a>
@@ -31,7 +31,7 @@
         <input type="text" class="task selected">
         <button class="task-btn edit">Edit</button>
         <button class="task-btn delete">
-          <img class="del-icon" src="./remove.svg">
+          <img class="del-icon" src="./remove.svg" alt="delete icon">
         </button>
       </li>
       <li class="task-row edit-mode">
@@ -40,7 +40,7 @@
         <input type="text" value="Go Shopping" class="task selected">
         <button class="task-btn edit">Save</button>
         <button class="task-btn delete">
-          <img class="del-icon" src="./remove.svg">
+          <img class="del-icon" src="./remove.svg" alt="delete icon">
         </button>
       </li>
     </ul>
@@ -52,7 +52,7 @@
         <input type="text" class="task selected">
         <button class="task-btn edit">Edit</button>
         <button class="task-btn delete">
-          <img class="del-icon" src="./remove.svg">
+          <img class="del-icon" src="./remove.svg" alt="delete icon">
         </button>
       </li>
     </ul>
