--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
 </head>
 
-<body>
+<body class="page">
   <header class="eisenhower-container">
     <img id="matrix" src="./eisenhower-matrix.jpg" alt="eisenhower matrix">
     <a class="more-info" href="https://goal-life.com/page/method/matrix-eisenhower">
